updated for two players

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="game-cell nine"></div>
         </div>
     </div>
+    <div id="overlay"><h1 class="oneP">1p</h1><h1 class ="twoP">2p</h1></div>
     <script src="app.js"></script>
 </body>
 </html>
